# voice-translator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/routers/: feishu.py  history.py  translate.py  tts.py
backend/app/services/: elevenlabs_service.py  feishu_bitable_service.py  llm_service.py  translation.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AudioPlayer.tsx  FeishuSyncPanel.tsx  HistoryPanel.tsx  ResultPanel.tsx  TranslatorForm.tsx
frontend/src/types/: index.ts
