[project]
name = "voice-translator-backend"
version = "0.1.0"
description = "Voice translator backend — FastAPI + SQLite + OpenAI + ElevenLabs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
